# subtext

./: .cursorignore  AGENTS.md  CLAUDE.md  Dockerfile  ECOSYSTEM.md  README.md  llms-full.txt  llms.txt  pyproject.toml  requirements-ci.txt
.github/workflows/: enclii-build.yml  networkpolicy-port-lint.yml
infra/k8s/production/: api-deployment.yaml  api-service.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  secrets-template.yaml
landing/: index.html
scripts/: check-networkpolicy-ports.py
src/subtext/api/: app.py
